--- a/apps/blog-vite/src/pages/_layout/style.module.css
+++ b/apps/blog-vite/src/pages/_layout/style.module.css
@@ -1,6 +1,6 @@
 .RootLayout {
   height: 100dvh;
-  width: 100vw;
+  width: 100dvw;
 
   .navigationSideBarWrapper {
     @media (orientation: portrait) {
